--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api para controle de conta corrente, cadastro de usuarios, depositos e tranferencias entre contas banco e credito ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "pretest": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate",
     "test": "mocha --reports"
   },
